overlays/staging/patch-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-db
spec:
  template:
    spec:
      containers:
      - name: postgres
