overlays/staging/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: todo-app
    namespace: gitops-todo
spec:
    template:
        spec:
            containers:
                -   name: todo-app
                    image: dhinojosa/gitops-todo:2024.11.29.053507
