overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: todo-app
    namespace: gitops-todo
spec:
    rules:
        -   host: staging.moltenjava.net
            http:
                paths:
                    -   path: /mild-temper
                        pathType: Prefix
                        backend:
                            service:
                                name: todo-app
                                port:
                                    number: 80
